--- a/pages/soh6/443203.md
+++ b/pages/soh6/443203.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="美國總統川普表示絕不承認被操縱的2020大選。（AP）" src="https://img.soundofhope.org/2020-11/11-15-5-1-1605464604360.jpg"/>
+<div><img alt="美国总统川普表示绝不承认被操纵的2020大选。（AP）" src="https://img.soundofhope.org/2020-11/11-15-5-1-1605464604360.jpg"/>
 <br/><figcaption class="caption">
- 美國總統川普表示絕不承認被操縱的2020大選。（AP）
+ 美国总统川普表示绝不承认被操纵的2020大选。（AP）
 </figcaption></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -17,79 +17,79 @@
 <div><div class="Content__Wrapper sc-1bvya0-0 grZQxZ">
  <p class="meta-top">
   <span class="meta">
-   【希望之聲2020年11月15日】（本台記者張莉莉綜合報導）
+   【希望之声2020年11月15日】（本台记者張莉莉综合报导）
   </span>
-  2020年美國總統大選不僅牽動着每一位美國人的心，也成爲全世界聚焦的大事。分析家指出，此次美國大選早已不是一次黨派爭議，而是一次正邪較量。如果民主黨高層通過舞弊的方式真的竊取了本次大選的結果，那美國的憲政和自由將不復存在。
+  2020年美国总统大选不仅牵动着每一位美国人的心，也成为全世界聚焦的大事。分析家指出，此次美国大选早已不是一次党派争议，而是一次正邪较量。如果民主党高层通过舞弊的方式真的窃取了本次大选的结果，那美国的宪政和自由将不复存在。
  </p>
  <p>
-  來自德國的網友莫爾（Zeynep Mol）在推特上爆料，美國2020年大選的
-  <ok href="/term/419785?lang=b5">
-   原始數據
+  来自德国的网友莫尔（Zeynep Mol）在推特上爆料，美国2020年大选的
+  <ok href="/term/419785">
+   原始数据
   </ok>
-  保留在德國法蘭克福的Dominion服務器上。該數據顯示，Dominion投票軟件的真實記錄是：
-  <ok href="/term/1041?lang=b5">
+  保留在德国法兰克福的Dominion服务器上。该数据显示，Dominion投票软件的真实记录是：
+  <ok href="/term/1041">
    川普
   </ok>
-  在11月3日大選日晚已經獲得壓倒性勝利，獲得了
-  <ok href="/term/419788?lang=b5">
-   410張選舉人票
+  在11月3日大选日晚已经获得压倒性胜利，获得了
+  <ok href="/term/419788">
+   410张选举人票
   </ok>
-  。而民主黨的大本營加州也已經翻紅。
+  。而民主党的大本营加州也已经翻红。
  </p>
  <p>
-  11月14日（週六），全美五十個州舉行了全國同步集會，抗議大選舞弊，“制止偷竊”（Stop the Steal）大選結果。在美國首都華盛頓DC，至少有50萬人蔘與了挺川大遊行和機會，場面壯觀感人。
+  11月14日（周六），全美五十个州举行了全国同步集会，抗议大选舞弊，“制止偷窃”（Stop the Steal）大选结果。在美国首都华盛顿DC，至少有50万人参与了挺川大游行和机会，场面壮观感人。
  </p>
  <figure class="OImage__StyledFigure-sc-1lfley0-0 hHSfVg">
-  <img alt="圖爲華盛頓數十萬人舉行支持川普連任的遊行，場面壯觀。（大紀元）" src="https://img.soundofhope.org/2020-11/11-15-4-1605464446680.jpg"/>
+  <img alt="图为华盛顿数十万人举行支持川普连任的游行，场面壮观。（大纪元）" src="https://img.soundofhope.org/2020-11/11-15-4-1605464446680.jpg"/>
   <br/><figcaption>
-   圖爲華盛頓數十萬人舉行支持川普連任的遊行，場面壯觀。（大紀元）
+   图为华盛顿数十万人举行支持川普连任的游行，场面壮观。（大纪元）
   </figcaption>
  </figure>
  <p>
-  <ok href="/term/1041?lang=b5">
+  <ok href="/term/1041">
    川普
   </ok>
-  總統於上午10點過乘車來到了
-  <ok href="/term/419776?lang=b5">
-   華府遊行
+  总统于上午10点过乘车来到了
+  <ok href="/term/419776">
+   华府游行
   </ok>
-  現場，他在車中開心地向支持者們揮手致意，笑容燦爛。
+  现场，他在车中开心地向支持者们挥手致意，笑容灿烂。
  </p>
  <figure class="OImage__StyledFigure-sc-1lfley0-0 hHSfVg">
-  <img alt="圖爲川普總統11月14日現身華府挺川遊行隊伍，面露燦爛笑容。（推特圖片）" src="https://img.soundofhope.org/2020-11/11-15-3-1-1-1-1605464525119.jpg"/>
+  <img alt="图为川普总统11月14日现身华府挺川游行队伍，面露灿烂笑容。（推特图片）" src="https://img.soundofhope.org/2020-11/11-15-3-1-1-1-1605464525119.jpg"/>
   <br/><figcaption>
-   圖爲川普總統11月14日現身華府挺川遊行隊伍，面露燦爛笑容。（推特圖片）
+   图为川普总统11月14日现身华府挺川游行队伍，面露灿烂笑容。（推特图片）
   </figcaption>
  </figure>
  <p>
-  關於大選舞弊，
-  <ok href="/term/1041?lang=b5">
+  关于大选舞弊，
+  <ok href="/term/1041">
    川普
   </ok>
-  律師團隊已在取證方面取得重大進展，在多個州提交了訴狀。
-  <ok href="/term/1041?lang=b5">
+  律师团队已在取证方面取得重大进展，在多个州提交了诉状。
+  <ok href="/term/1041">
    川普
   </ok>
-  律師團隊著名律師伍德表示，
-  <ok href="/term/3365?lang=b5">
+  律师团队著名律师伍德表示，
+  <ok href="/term/3365">
    拜登
   </ok>
-  、奧巴馬、希拉里等民主黨大佬企圖在這次大選中竊取國家政權，犯下諸多罪行，很可能會因此入獄。
+  、奥巴马、希拉里等民主党大佬企图在这次大选中窃取国家政权，犯下诸多罪行，很可能会因此入狱。
  </p>
  <p>
-  對於華府盛大的集會，所謂“主流”的美國左派媒體幾乎都默不作聲。同時，他們仍然不斷地鼓譟“
-  <ok href="/term/3365?lang=b5">
+  对于华府盛大的集会，所谓“主流”的美国左派媒体几乎都默不作声。同时，他们仍然不断地鼓譟“
+  <ok href="/term/3365">
    拜登
   </ok>
-  勝選”的虛假消息。對此
-  <ok href="/term/1041?lang=b5">
+  胜选”的虚假消息。对此
+  <ok href="/term/1041">
    川普
   </ok>
-  總統發推文表示，
-  <ok href="/term/3365?lang=b5">
+  总统发推文表示，
+  <ok href="/term/3365">
    拜登
   </ok>
-  只是在假新聞媒體的眼裏贏得了大選，“我不會承認（假新聞的結論），我們還有很長的路要走！這是一次被操縱的選舉！”
+  只是在假新闻媒体的眼里赢得了大选，“我不会承认（假新闻的结论），我们还有很长的路要走！这是一次被操纵的选举！”
  </p>
  <div class="soh-embed">
   <div class="soh-embed-inner">
@@ -100,99 +100,140 @@
   </div>
  </div>
  <p>
-  以下是11月15日（週日）選情後續更新報導：
+  以下是11月15日（周日）选情后续更新报导：
  </p>
  <h3>
-  專家指喬治亞州重新計票有詐
+  专家指乔治亚州重新计票有诈
  </h3>
  <p>
-  政治戰略家莫里斯（Dick Morris）近日指出，雖然喬治亞州正在進行手工重新計票，但這仍是一個假象，是個騙局。他認爲，該計票過程仍然被操縱，他不認爲喬州的計票工作符合法律。
+  政治战略家莫里斯（Dick Morris）近日指出，虽然乔治亚州正在进行手工重新计票，但这仍是一个假象，是个骗局。他认为，该计票过程仍然被操纵，他不认为乔州的计票工作符合法律。
  </p>
  <p>
-  莫里斯在11月13日接受Newsmax電視臺的採訪談到，“喬州的監票員離桌子很遠，根本看不到選票。他們也不被允許檢查信封，導致很多不合法的郵寄選票仍然被計算在內。”他最後說，“這是一個騙局。我做了民調，我確信
-  <ok href="/term/1041?lang=b5">
+  莫里斯在11月13日接受Newsmax电视台的采访谈到，“乔州的监票员离桌子很远，根本看不到选票。他们也不被允许检查信封，导致很多不合法的邮寄选票仍然被计算在内。”他最后说，“这是一个骗局。我做了民调，我确信
+  <ok href="/term/1041">
    川普
   </ok>
-  已經贏得了喬州選舉。”
+  已经赢得了乔州选举。”
  </p>
  <h3>
-  衆議員：喬州計票必須覈實簽名 否則不應獲認證
+  众议员：乔州计票必须核实签名 否则不应获认证
  </h3>
  <p>
-  喬州是第一個宣佈手工重新計票的搖擺州，結果如何引人注目。共和黨籍喬州聯邦衆議員柯林斯（Doug Collins）目前在該州幫助
-  <ok href="/term/1041?lang=b5">
+  乔州是第一个宣布手工重新计票的摇摆州，结果如何引人注目。共和党籍乔州联邦众议员柯林斯（Doug Collins）目前在该州帮助
+  <ok href="/term/1041">
    川普
   </ok>
-  競選團隊監督重新計票的工作。他11月14日表示，如果計票人員對缺席選票上的簽名和信封上的簽名不進行覈對的話，該州的計票結果仍不應獲得州長認證。
+  竞选团队监督重新计票的工作。他11月14日表示，如果计票人员对缺席选票上的签名和信封上的签名不进行核对的话，该州的计票结果仍不应获得州长认证。
  </p>
  <p>
-  柯林斯說：“喬州的手工計票過程必須包括審查缺席選票和信封上的簽名，以驗證是否這個‘簽名驗證過程’得到妥善執行。如果沒有這個，喬州就無法對選舉結果予以妥善認證。”
+  柯林斯说：“乔州的手工计票过程必须包括审查缺席选票和信封上的签名，以验证是否这个‘签名验证过程’得到妥善执行。如果没有这个，乔州就无法对选举结果予以妥善认证。”
  </p>
  <h3>
-  著名律師
-  <ok href="/term/82935?lang=b5">
-   鮑威爾
+  著名律师
+  <ok href="/term/82935">
+   鲍威尔
   </ok>
   加入
-  <ok href="/term/1041?lang=b5">
+  <ok href="/term/1041">
    川普
   </ok>
-  競選團隊律師組
+  竞选团队律师组
  </h3>
  <p>
   11月14日，
-  <ok href="/term/1041?lang=b5">
+  <ok href="/term/1041">
    川普
   </ok>
-  總統宣佈，著名律師
-  <ok href="/term/82935?lang=b5">
-   鮑威爾
+  总统宣布，著名律师
+  <ok href="/term/82935">
+   鲍威尔
   </ok>
-  （ Sidney Powell）加入了由前紐約市長
-  <ok href="/term/15066?lang=b5">
+  （ Sidney Powell）加入了由前纽约市长
+  <ok href="/term/15066">
    朱利安尼
   </ok>
-  領導的
-  <ok href="/term/1041?lang=b5">
+  领导的
+  <ok href="/term/1041">
    川普
   </ok>
-  競選團隊律師組。
-  <ok href="/term/82935?lang=b5">
-   鮑威爾
+  竞选团队律师组。
+  <ok href="/term/82935">
+   鲍威尔
   </ok>
-  曾任前國家安全顧問弗林（Michael Flynn）的辯護律師，之後在全國出名。
+  曾任前国家安全顾问弗林（Michael Flynn）的辩护律师，之后在全国出名。
  </p>
  <p>
-  <ok href="/term/82935?lang=b5">
-   鮑威爾
+  <ok href="/term/82935">
+   鲍威尔
   </ok>
-  在日前接受《福克斯新聞》的採訪時表示，
-  <ok href="/term/1041?lang=b5">
+  在日前接受《福克斯新闻》的采访时表示，
+  <ok href="/term/1041">
    川普
   </ok>
-  總統以壓倒性多數贏得這場選舉是無可辯駁的（事實）。她誓言要盡最大力量，揭露出每一個幫
-  <ok href="/term/3365?lang=b5">
+  总统以压倒性多数赢得这场选举是无可辩驳的（事实）。她誓言要尽最大力量，揭露出每一个帮
+  <ok href="/term/3365">
    拜登
   </ok>
-  竊取2020年總統選舉的民主黨人，將他們繩之以法。
+  窃取2020年总统选举的民主党人，将他们绳之以法。
  </p>
  <h3>
-  加州高等法院法官判定：加州州長紐森在選舉中違憲
+  加州高等法院法官判定：加州州长纽森在选举中违宪
  </h3>
  <p>
-  加州薩特縣高等法院法官赫克曼（Sarah Heckman）11月13日裁定，加州州長紐森（Gavin Newsom）在此次大選中做出超越其職權的決定，違反了美國憲法。
+  加州萨特县高等法院法官赫克曼（Sarah Heckman）11月13日裁定，加州州长纽森（Gavin Newsom）在此次大选中做出超越其职权的决定，违反了美国宪法。
+ </p>
+ <p style="line-height:1.38;margin-top:19px">
+  据悉，纽森在大选前颁布州长行政令，通知加州选民，所有想采用邮寄投票的人都可以通过邮寄的方式投票。赫克曼法官裁定：“纽森不适当地修改现行成文法律，超出了州长的职权，并违反了三权分立的原则。”
+ </p>
+ <h3 style="line-height:1.38;margin-top:19px">
+  安提法、“黑命贵”袭击华府挺川民众
+  <ok href="/term/1041">
+   川普
+  </ok>
+  谴责
+ </h3>
+ <p>
+  数十万
+  <ok href="/term/1041">
+   川普
+  </ok>
+  总统的支持者11月14日在华府举行“百万MAGA游行”，场面壮观。而美国国内恐怖组织安提法和民主党人支持的“黑命贵”组织当天却对和平的
+  <ok href="/term/1041">
+   川普
+  </ok>
+  支持者进行了暴力袭击。
  </p>
  <p>
-  據悉，紐森在大選前頒佈州長行政令，通知加州選民，所有想採用郵寄投票的人都可以通過郵寄的方式投票。赫克曼法官裁定：“紐森不適當地修改現行成文法律，超出了州長的職權，並違反了三權分立的原則。”
+  <ok href="/term/1041">
+   川普
+  </ok>
+  发推文谴责了“安提法人渣”的暴行，他也批评所谓主流媒体，对如此重大的事件保持沉默。他说：“这些人类激进左派垃圾乾了这些事，现在他们被捕了！”他还敦促华盛顿警察将犯罪者绳之以法，他对警察说：“开始行动吧，去做你们份内的事，不要退缩！！！”
+ </p>
+ <h3>
+  彭斯副总统演讲：将与总统一道战斗 维护大选真实性
+ </h3>
+ <p>
+  美国副总统彭斯11月14日在弗吉尼亚州发表演讲，表示他将和
+  <ok href="/term/1041">
+   川普
+  </ok>
+  总统并肩作战，共同维护美国大选的诚信和真实性。他还表示已做好计划，将配合
+  <ok href="/term/1041">
+   川普
+  </ok>
+  总统在白宫再干四年。
+ </p>
+ <p>
+  彭斯说：“我将和总统一起继续战斗，直到每一张合法投票得到计算，而所有的非法投票都被剔除......我们永远都不会停止为美国的再次伟大而努力。”他提到传团队将在全国各地发起诉讼，法办选举舞弊者。
  </p>
  <p>
   （更新中）
  </p>
  <p class="meta-btm">
-  責任編輯：宋月
+  责任编辑：宋月
  </p>
  <p class="meta-btm">
-  本文章或節目經希望之聲編輯製作，轉載請註明希望之聲幷包含原文標題及鏈接。
+  本文章或节目经希望之声编辑制作，转载请注明希望之声并包含原文标题及链接。
  </p>
 </div>
 </div>
