--- a/pages/nf4514/n12550675.md
+++ b/pages/nf4514/n12550675.md
@@ -76,6 +76,38 @@
  情况的实时更新：
 </h4>
 <h3>
+ 加州选民挺川普 深知共产主义危险
+</h3>
+<p>
+ 加州选民巴克・索格斯（Buck Soggs）周六（11月14日）参加了停止窃取大选（Stop the Steal）集会活动，他告诉《大纪元》记者，来自共产国家——越南的他，知道共产主义代表着什么。
+</p>
+<p>
+ “我们因为共产主义而失去了我们的国家，所以我们都认识到了共产主义的模样。”索格斯说，“共产主义看起来就像压制选民，利用媒体说谎话或操纵你，告诉你北越人在历史上的所作所为。他们控制了报纸，控制了所有的媒体，他们转过身来，试图让所有人都支持他们，而事实证明这一切都是谎言。”
+</p>
+<p>
+ 索格斯继续说道，然而“我看到它（共产主义）正在这里发生”；出于这个原因，索格斯说，他支持川普（特朗普）总统和他的反社会主义理念。
+</p>
+<figure class="wp-caption aligncenter" id="attachment_12551649" style="width: 450px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/Screenshot-2020-11-15-113519-700x420.jpg">
+  <img alt="" class="size-medium wp-image-12551649" src="https://i.epochtimes.com/assets/uploads/2020/11/Screenshot-2020-11-15-113519-700x420-450x270.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  2020年11月14日，加州选民巴克・索格斯（Buck Soggs）参加了停止窃取大选（Stop the Steal）集会。（新唐人电视台）
+ </figcaption><br/>
+</figure><br/>
+<h3>
+ 朱利安尼：川普“讽刺”拜登自称当选，他“远未”放弃
+</h3>
+<p>
+ 川普的私人律师鲁迪‧朱利安尼（Rudy Giuliani）周日接受媒体采访表示，总统当天稍早的推文是在“讽刺”拜登自称当选，并说川普“远未”放弃11月3日的选举。
+</p>
+<p>
+ 朱利安尼谈到这条推特时说，“他（川普）更多的意思是讽刺，或者是对我们所处的可怕时代的评论，以及媒体说拜登赢了。”
+</p>
+<p>
+ 朱利安尼补充道，“很明显，这是非法的。媒体曾试图宣布选举（结果），他们没有合法权力决定选举。它由我们的选民决定，而不是由NBC、CBS、MSNBC和CNN，甚至福克斯决定。”
+</p>
+<h3>
  鲍威尔：我们准备好推翻多个州的选举结果
 </h3>
 <p>
@@ -495,7 +527,7 @@
   <p>
    责任编辑：李玲
   </p>
-  <div id="gtx-trans" style="position: absolute; left: 5px; top: 944.935px;">
+  <div id="gtx-trans" style="position: absolute; left: 31px; top: 1010.91px;">
   </div>
  </p>
 </p></div>
