--- a/pages/nf4514/n12550675.md
+++ b/pages/nf4514/n12550675.md
@@ -5,11 +5,9 @@
 
 
 
-<div><img alt="【大选更新11·15】川普再告宾州停止认证结果" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229154522-600x400.jpg"/>
+<div><img alt="【大选更新11·15】川普再告宾州停止认证结果" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1285663172-1-600x400.jpg"/>
 <div class="caption">
- 川普周日上午表示：
-
-“他（拜登）只是在假新闻的眼里赢了。 我绝不认输！ 我们还有很长的路要走。 这是一次‘被操纵的选举’！”图为2020年10月18日，川普抵达加州约翰韦恩机场（John Wayne Airport）。(MANDEL NGAN/AFP via Getty Images)
+ 图为2020年11月14日，挺川民众在华盛顿特区参加“百万MAGA游行”（Million MAGA March），从自由广场步行到最高法院，以抗议2020年总统选举的舞弊现象。（Tasos Katopodis/Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
