--- a/pages/soh6/443203.md
+++ b/pages/soh6/443203.md
@@ -49,7 +49,7 @@
   <ok href="/term/1041">
    川普
   </ok>
-  总统于上午10点过乘车来到了
+  总统于上午10点多乘车来到了
   <ok href="/term/419776">
    华府游行
   </ok>
@@ -207,7 +207,7 @@
   <ok href="/term/1041">
    川普
   </ok>
-  发推文谴责了“安提法人渣”的暴行，他也批评所谓主流媒体，对如此重大的事件保持沉默。他说：“这些人类激进左派垃圾乾了这些事，现在他们被捕了！”他还敦促华盛顿警察将犯罪者绳之以法，他对警察说：“开始行动吧，去做你们份内的事，不要退缩！！！”
+  发推文谴责了“安提法人渣”的暴行，他也批评所谓主流媒体，对如此重大的事件保持沉默。他说：“这些人类激进左派垃圾干了这些事，现在他们被捕了！”他还敦促华盛顿警察将犯罪者绳之以法，他对警察说：“开始行动吧，去做你们份内的事，不要退缩！！！”
  </p>
  <h3>
   彭斯副总统演讲：将与总统一道战斗 维护大选真实性
@@ -224,7 +224,11 @@
   总统在白宫再干四年。
  </p>
  <p>
-  彭斯说：“我将和总统一起继续战斗，直到每一张合法投票得到计算，而所有的非法投票都被剔除......我们永远都不会停止为美国的再次伟大而努力。”他提到传团队将在全国各地发起诉讼，法办选举舞弊者。
+  彭斯说：“我将和总统一起继续战斗，直到每一张合法投票得到计算，而所有的非法投票都被剔除......我们永远都不会停止为美国的再次伟大而努力。”他提到
+  <ok href="/term/1041">
+   川普
+  </ok>
+  团队将在全国各地发起诉讼，法办选举舞弊者。
  </p>
  <p>
   （更新中）
