同步于: 11月16日18时3分

--- a/pages/nsc412/n12550675.md
+++ b/pages/nsc412/n12550675.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11·15】川普再告宾州停止认证结果" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1285663172-1-600x400.jpg"/>
+<div><img alt="【大选更新11·15】川普再向宾州提诉" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1285663172-1-600x400.jpg"/>
 <div class="caption">
  图为2020年11月14日，挺川民众在华盛顿特区参加“百万MAGA游行”（Million MAGA March），从自由广场步行到最高法院，以抗议2020年总统选举的舞弊现象。（Tasos Katopodis/Getty Images）
 </div></div><hr/>
