--- a/pages/nsc412/n12550675.md
+++ b/pages/nsc412/n12550675.md
@@ -1,4 +1,4 @@
-### 【大选更新11·15】川普再告宾州停止认证结果
+### 【大选更新11·15】川普再向宾州提诉
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
