--- a/indexes/p4.md
+++ b/indexes/p4.md
@@ -1,3 +1,26 @@
-
-### 已转移至新页面 [看博谈](S看博谈.md) 
-
+#### [魔鬼预言是被安排的 谁在操控美国深层政府？(视频)](../pages/p4/952728.md) 
+#### [【东方纵横】深层政府 浑水有多深(视频)](../pages/p4/952693.md) 
+#### [川普到底面对着怎样的挑战？(图)](../pages/p4/952690.md) 
+#### [川普总统的第二任期就职典礼(图)](../pages/p4/952650.md) 
+#### [【民众心声】共产党宣传的都要反着理解(图)](../pages/p4/952533.md) 
+#### [美国乱局 北京有机可乘？(图)](../pages/p4/952578.md) 
+#### [魔鬼预言是被安排的 谁在操控美国深层政府？(视频)](../pages/p4/952728.md) 
+#### [【东方纵横】深层政府 浑水有多深(视频)](../pages/p4/952693.md) 
+#### [川普到底面对着怎样的挑战？(图)](../pages/p4/952690.md) 
+#### [对川普的攻击是现代版傲慢与偏见(图)](../pages/p4/952689.md) 
+#### [川普总统的第二任期就职典礼(图)](../pages/p4/952650.md) 
+#### [拜登中庚子魔咒 左派将有一批人进监狱(视频)](../pages/p4/952648.md) 
+#### [【民众心声】共产党宣传的都要反着理解(图)](../pages/p4/952533.md) 
+#### [美国乱局 北京有机可乘？(图)](../pages/p4/952578.md) 
+#### [我非常满意现在大选的结果(图)](../pages/p4/952572.md) 
+#### [脸书的“造王任务”(图)](../pages/p4/952614.md) 
+#### [马云们不懂覆巢无完卵吗？(图)](../pages/p4/952612.md) 
+#### [关于疫苗的思考(图)](../pages/p4/952473.md) 
+#### [民主党会有多少大佬被关进监狱？(图)](../pages/p4/952587.md) 
+#### [中共要给台商注射疫苗 美国表态台湾不是中国的(视频)](../pages/p4/952554.md) 
+#### [夜长梦多？秦鹏：拜登急逼宫 无异于政变(视频)](../pages/p4/952560.md) 
+#### [中共大内宣升级 “习思想”无孔不入(图)](../pages/p4/952499.md) 
+#### [推特中文圈热议 中共最害怕的一幕出现(图)](../pages/p4/952495.md) 
+#### [与中共同生共荣的生死教训(图)](../pages/p4/952493.md) 
+#### [科技创新列入国家规划意味着什么？(图)](../pages/p4/952479.md) 
+#### [民营企业家孙大午被捕 习近平要赶尽杀绝？(图)](../pages/p4/952477.md) 
