--- a/indexes/p7.md
+++ b/indexes/p7.md
@@ -1,3 +1,26 @@
-
-### 已转移至新页面 [看文化](S看文化.md) 
-
+#### [因果报应实录：黜善变犬(图)](../pages/p7/952553.md) 
+#### [生死天定 生死簿里为何人名有五个字的？(图)](../pages/p7/952571.md) 
+#### [3500年前的殷朝就有了坦克的原型！(图)](../pages/p7/952561.md) 
+#### [【戴东尼专栏】诗歌：圣战(图)](../pages/p7/952669.md) 
+#### [必读！最励志的古诗名句(图)](../pages/p7/952555.md) 
+#### [神奇的《桃叶辞》一语成谶(图)](../pages/p7/952453.md) 
+#### [因果报应实录：黜善变犬(图)](../pages/p7/952553.md) 
+#### [生死天定 生死簿里为何人名有五个字的？(图)](../pages/p7/952571.md) 
+#### [3500年前的殷朝就有了坦克的原型！(图)](../pages/p7/952561.md) 
+#### [【戴东尼专栏】诗歌：圣战(图)](../pages/p7/952669.md) 
+#### [必读！最励志的古诗名句(图)](../pages/p7/952555.md) 
+#### [高人给拜登算八字：气数已尽 12月7日最关键(图)](../pages/p7/952565.md) 
+#### [神奇的《桃叶辞》一语成谶(图)](../pages/p7/952453.md) 
+#### [清圣祖康熙的为政之道(图)](../pages/p7/952424.md) 
+#### [【戴东尼专栏】康熙朝艺谈——清、慎、勤(组图)](../pages/p7/947755.md) 
+#### [小畑薰良与英译《李白诗集》（下）(图)](../pages/p7/952130.md) 
+#### [贪恋世间荣华 失去修道机缘(图)](../pages/p7/952429.md) 
+#### [选战(图)](../pages/p7/952404.md) 
+#### [大宋国运的预言和谶语(图)](../pages/p7/952215.md) 
+#### [“天无绝人之路”是什么意思？(图)](../pages/p7/952369.md) 
+#### [小畑薰良与英译《李白诗集》（上）(图)](../pages/p7/952126.md) 
+#### [读《推背图》第四十四象看美国总统大选(图)](../pages/p7/952121.md) 
+#### [诗歌：坚定信念(图)](../pages/p7/952204.md) 
+#### [神奇！写一个汉字就能看出人的过去未来(图)](../pages/p7/952062.md) 
+#### [从风水和历史上分析美国大选结果(图)](../pages/p7/952218.md) 
+#### [【道真专栏】治国大道之十八：西方魔道(图)](../pages/p7/951792.md) 
