--- a/indexes/p8.md
+++ b/indexes/p8.md
@@ -1,3 +1,26 @@
-
-### 已转移至新页面 [看生活](S看生活.md) 
-
+#### [相貌有“福气”的3大特征(图)](../pages/p8/952664.md) 
+#### [冬季蔬菜的各种妙用(组图)](../pages/p8/952521.md) 
+#### [如何快速整理工作流程（S.O.P.）？(组图)](../pages/p8/952649.md) 
+#### [王阳明：控制情绪 就是修行(图)](../pages/p8/952093.md) 
+#### [人生最后的存折(图)](../pages/p8/952362.md) 
+#### [“落空”的幸福(图)](../pages/p8/952566.md) 
+#### [少走冤枉路？最好用的“思考工具”学起来(图)](../pages/p8/952738.md) 
+#### [相貌有“福气”的3大特征(图)](../pages/p8/952664.md) 
+#### [冬季蔬菜的各种妙用(组图)](../pages/p8/952521.md) 
+#### [如何快速整理工作流程（S.O.P.）？(组图)](../pages/p8/952649.md) 
+#### [王阳明：控制情绪 就是修行(图)](../pages/p8/952093.md) 
+#### [人生最后的存折(图)](../pages/p8/952362.md) 
+#### [“落空”的幸福(图)](../pages/p8/952566.md) 
+#### [“iPhone 12 mini‧12 Pro Max”开箱表现如何？(图)](../pages/p8/952558.md) 
+#### [想以“创意”解决问题 这“方法”最适用(组图)](../pages/p8/951660.md) 
+#### [“人贪四样 一生白忙”早懂少吃亏(图)](../pages/p8/952525.md) 
+#### [轻松购买优质酱油的3个“技巧”(图)](../pages/p8/952086.md) 
+#### [5G环境不成熟 韩国56万用户改回4G(图)](../pages/p8/952433.md) 
+#### [职场人生不想留遗憾？这“工具”要学会(组图)](../pages/p8/952420.md) 
+#### [神选之子：川普人尽皆知的善(组图)](../pages/p8/952384.md) 
+#### [做人有四忌(图)](../pages/p8/952108.md) 
+#### [iPhone 12‧iPhone 12 Pro“灾情”频传(图)](../pages/p8/952313.md) 
+#### [人生是场马拉松 跑到终点才算赢家(图)](../pages/p8/952305.md) 
+#### [智者6不贪(组图)](../pages/p8/952290.md) 
+#### [积多大的德 有多大的福报(图)](../pages/p8/952117.md) 
+#### [手机充电速度变慢 这“动作”常被忽略(图)](../pages/p8/952164.md) 
