--- a/pages/p5/952743.md
+++ b/pages/p5/952743.md
@@ -1,4 +1,4 @@
-### 天钧政经：漫谈中国证券业内幕 大庭广众的荒唐事(视频)
+### RCEP对中国效益低 难消美中贸易战伤害(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,79 +6,84 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <div id="story_video" style="text-align: center;margin-top: 20px;">
- </div>
- <p>
-  【看中国2020年9月25日讯】我们通过三期节目让大家了解一下中国
-  <strong>
-   金融
-  </strong>
-  业的情况，金融业三大支柱：
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/银行" target="_blank">
-    银行
+ <p style="text-align:center">
+  <img alt="贸易战 RCEP 经济" src="https://img3.secretchina.com/pic/2020/11-16/p2819261a771598319-ss.jpg"/>
+  <br>
+   协定签署完成后，RCEP各参与国领袖代表向在场媒体挥手致意。（图片来源：中央社）
+   <span id="hideid" name="hideid" style="color:red;display:none;">
+    <span href="https://www.secretchina.com">
+    </span>
    </span>
-  </strong>
-  、
-  <strong>
-   证券
-  </strong>
-  和
-  <strong>
-   保险
-  </strong>
-  ，因此分别说一说这银行业、证券业和保险业的一些内幕和不良现象。
-  <span id="hideid" name="hideid" style="color:red;display:none;">
-   <span href="https://www.secretchina.com">
-   </span>
-  </span>
+  </br>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  <span href="https://www.secretchina.com/news/gb/2020/09/23/946912.html" target="_blank">
-   天钧政经：漫谈中国银行业内幕(视频)
-  </span>
+  【看中国2020年11月16日讯】（看中国记者丁晓雨综合报导）虽然北京主导的“区域全面经济伙伴关系协定”（
+  <strong>
+   RCEP
+  </strong>
+  ）涵盖了全球人口与GDP的近三分之一，但据媒体报导，RCEP对中国
+  <strong>
+   经济
+  </strong>
+  的帮助并不能抵销美中
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/贸易战" target="_blank">
+    贸易战
+   </span>
+  </strong>
+  的冲击，也不能缓解中澳紧张的关系。有彭博专栏作家直指，RCEP更像帝国主义的产物，而非自由贸易。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  在
-  <span href="https://www.secretchina.com/news/gb/tag/证券" target="_blank">
-   证券
-  </span>
-  相关的会议上，中国国务院总理李克强为什么火冒三丈？哪家证券公司是财政部的亲儿子？证券业的高级管理人员对普遍百姓怎么样的鄙视？证券从业人员在某个东西的催化下，大庭广众之下做出了荒唐事……
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/RCEP" target="_blank">
+    RCEP
+   </span>
+   对中国的效益难抵贸易战伤害
+  </strong>
  </p>
  <p>
+  据香港《南华早报》报导，今年6月期间，美国智库“彼得森国际经济研究所”（PIIE）的研究人员发现，如果美中紧张关系持续下去，到2030年，RCEP将实际增加中国GDP的0.4%，但
+  <span href="https://zh.wikipedia.org/wiki/中美贸易战" target="_blank">
+   贸易战
+  </span>
+  将折损1.1%。
+ </p>
+ <p>
+  澳洲昆士兰大学与印尼财政部共同进行的研究则估算出，到2030年，
+  <span href="https://zh.wikipedia.org/wiki/区域全面经济伙伴关系协定" target="_blank">
+   RCEP
+  </span>
+  将提振中国GDP的0.08%，而贸易战则将削减其GDP的0.32%。
+ </p>
+ <p>
+  报告撰文者之一、昆士兰大学副教授雷努卡·马哈德万（Renuka Mahadevan）指出，武汉肺炎疫情对区域
+  <span href="https://zh.wikipedia.org/wiki/经济" target="_blank">
+   经济
+  </span>
+  的伤害，或许使得RCEP的益处对签署国而言看似更为卓著，因为成长基期比较低。然而对中国来说，相关数据或许只是“故事的一部分”，RCEP的意义不仅在于增长边际效益。
+ </p>
+ <p>
+  PIIE的研究认为，从目前的局势来看，
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  证券业概况：
- </p>
- <p>
-  2019年，中国证券行业实现营业收入3604.83亿元（人民币，下同），同比增长35.37%;实现净利润1230.95亿元，同比增长84.77%。
- </p>
- <p>
-  分业务看，2019年中国证券行业净收入占比最高的业务是证券投资收益，即证券公司的自营业务，2019年证券投资收益净收入达到1221.6亿元，占比高达37.37%。代理买卖证券业务，即经纪业务，净收入排名第二，为787.63亿元，占比约24.10%。
-  <br>
-   <br>
-    （文章全文请见下面链接，以及观看视频了解内容）
-   </br>
-  </br>
- </p>
- <p>
+  虽然是RCEP最大受惠国，但该研究预测，RCEP并不能够抵销贸易战的伤害，以及对手协议“跨太平洋伙伴全面进步协定”（CPTPP）引发的贸易转移，尤其是轻工业与先进制造业。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -93,9 +98,9 @@
   </div>
  </center>
  <p>
-  <span href="https://www.secretchina.com/kzgd/subscribe.html" target="_blank">
-   （在五彩缤纷的世界、信息爆炸的时代，真相就是先机和财富。成为《看中国》荣誉会员，就会最先看到“天钧政经”最全、更多、更精彩的评论分析文章。）
-  </span>
+  <strong>
+   专家： 中澳紧张关系 难用RCEP解决
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -110,6 +115,7 @@
   </div>
  </center>
  <p>
+  同为签署国的中澳双方目前正处于关系紧张时刻，北京也因此封杀大量澳洲产品，而该局面是否能因RCEP的签署而改善，专家表示，并不看好。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -124,6 +130,7 @@
   </div>
  </center>
  <p>
+  据《南华早报》报导，新南威尔斯大学（UNSW Sydney）中国商法研究中心（CIBEL）贸易专家王衡指出，与过去北美自由贸易协定（NAFTA）不同的是，RCEP在贸易争端解决这一问题上，或着墨不足，以至于无法解决如此“棘手”的问题。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -138,6 +145,39 @@
   </div>
  </center>
  <p>
+  报导还引述新加坡管理大学法学副教授高树超表示，虽然多数FTA都设有争端解决机制，但却“众所周知的无用”。事实上，中澳FTA本就有这种机制，但没能派上用场，甚至理论上最遵照争端解决机制规则的世贸组织（WTO），澳洲也没有动用，遑论想通过RCEP解决。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  同为CIBEL专家的周围欢则指出，争端解决机制无法解决政治分歧，如果中澳关系在RCEP签署的当下都未改善，那么签署之后也没有理由会有所不同。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   彭博作家：RCEP更像帝国主义的产物
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -156,6 +196,7 @@
   </ins>
  </center>
  <p>
+  此外，据《自由时报》报导，《彭博社》专栏作家费克林（David Fickling）撰文直指，这种贸易协议恐非“自由贸易”之下的结晶，而更像是彰显19世纪末新帝国主义“强权即公理”（might-is-right）的产物，只是此次变成了由北京所主导。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -170,6 +211,7 @@
   </div>
  </center>
  <p>
+  费克林的举的例子正是双方早已签署自由贸易协定的中澳两国。由于中澳关系恶化，在北京“非官方”的指示下，目前有好几公吨的澳洲龙虾在上海浦东机场腐烂。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -184,6 +226,11 @@
   </div>
  </center>
  <p>
+  北京在进行这种
+  <span href="https://www.secretchina.com/news/gb/tag/经济" target="_blank">
+   经济
+  </span>
+  威胁的同时，又将贸易伙伴纳入贸易协议的做法，正是苏联解体后，不再仰仗国际规则，再度回到“强权即公理”的时代写照。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -198,7 +245,22 @@
   </div>
  </center>
  <p>
-  (文章与视频仅代表作者个人立场和观点)
+  费克林表示，即使RCEP最早是由东南亚国协（ASEAN）所提出，但现在也已经变成了在“自由贸易”的借口下，实际上为北京所谓“伟大复兴”的“帝国主义”工具，就像19世纪新帝国主义欧洲一样，对内倾销产品到自己的殖民地，然后整个帝国对外实行贸易壁垒，造成殖民地的贫困，直到第一次世界大战的爆发才瓦解。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  费克林还直言，借由RCEP的推动，中国GDP到2030年时将提高大约0.5%，这实在不能说是一个很大的数字。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -230,7 +292,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -262,13 +324,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947134.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947134.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/947134.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/25/947134.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/952743.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/952743.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/952743.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/16/952743.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/947134.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/952743.md' width='0px' height='0px'/>
