--- a/pages/nsc418/n12553075.md
+++ b/pages/nsc418/n12553075.md
@@ -7,7 +7,7 @@
 
 <div><img alt="【大选更新11.16】川普将发起重大诉讼" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1285529792-600x400.jpg"/>
 <div class="caption">
- 川普（特朗普）总统表示将发起“重大诉讼”，证明2020美国总统大选是一场违宪的选举。(Tasos Katopodis/Getty Images)
+ 川普（特朗普）总统表示将发起“重大诉讼”，来证明2020美国总统大选是一场违宪的选举。(Tasos Katopodis/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
