--- a/pages/p1/952775.md
+++ b/pages/p1/952775.md
@@ -1,4 +1,4 @@
-### 内蒙古第二波镇压 不上学就重罚(图)
+### 女大生失足落水 英新任重庆总领事救人获赞(视频/图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="警察在内蒙古街头抓捕、殴打抗议民众。（图片来源：视频截图）" src="https://img3.secretchina.com/pic/2020/9-4/p2769421a849062036-ss.jpg"/>
+  <img alt="落水 重庆" src="https://img3.secretchina.com/pic/2020/11-17/p2819521a626319506-ss.jpg" style="height:340px; width:600px"/>
   <br>
-   警察在内蒙古街头抓捕、殴打抗议民众。（图片来源：视频截图）
+   近日一名女大学生在重庆游玩时不慎落水，行经此地的一位61岁老外将其救起。（图片来源：视频截图）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,56 +21,56 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月18日讯】（看中国记者苗薇综合报导）北京推行
+  【看中国2020年11月17日讯】（看中国记者黎小葵综合报导）近日，一名女游客在
   <strong>
-   双语教学
-  </strong>
-  新政策遭到
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/内蒙古" target="_blank">
-    内蒙古
+   <span href="https://www.secretchina.com/news/gb/tag/重庆" target="_blank">
+    重庆
    </span>
   </strong>
-  民众大规模抗议，近日当地政府发布第二波镇压公告，威胁拒绝上学的学生将面临开除学籍、以及取消各类补助等，并要求反抗汉语教学的蒙古人要接受“法制教育培训”。旅居美国的蒙族人说，北京当局触及了蒙族的底线，这个“模范少数民族”已经无法再沉默了。
+  中山古镇游玩时不慎落入水中，危机时刻，行经此地的英国驻重庆总
+  <strong>
+   领事馆
+  </strong>
+  总领事
+  <strong>
+   史云森
+  </strong>
+  （Stephen Ellison）跳入水中将人救起。有游客拍下现场惊人画面，引发民间热烈讨论。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据《自由时报》报导，内蒙古当局实施
-  <span href="https://en.wikipedia.org/wiki/Bilingual_education" target="_blank">
-   双语教学
+  网传视频显示，当时一名年轻女子在中山古镇拍照时，不慎脚下一滑，掉入水中。该女落水后拼命挣扎，但由于水流湍急，女子被冲到落水处的斜对侧，几乎失去知觉。这时，一名白发男子见状，立即跳入水中将女子托起，安全送上岸。
+ </p>
+ <p>
+  这一救人画面被现场游客记录下，并制作成视频上传网络。网友们看后纷纷表示，“作为重庆人，我真心感激您！感恩那些在危难时刻帮助过我、我们、我族的所有人。”“感谢英国大叔的义举”“61岁的‘洋雷锋’ ，拼命救了中国人一命，不值得赞美吗？”“给这位外国友人点赞。 ​”也有网友留言说，“中国人去哪里了”、“那么多人只有一个会游泳的外国人”、“强国弱国，一下就分明了”“看起来他年纪挺大了，还下水救人，值得点赞”。
+ </p>
+ <p>
+  事后有市民发现，救人的外国人竟然是英国驻重庆总
+  <span href="https://www.secretchina.com/news/gb/tag/领事馆" target="_blank">
+   领事馆
   </span>
-  新政引发蒙古族民众大规模抗议行动，自9月1日开学至今两星期，面对蒙古族人拒不送孩子回校，内蒙古政府大肆拘捕过千人，又要求反抗汉语教学的蒙古人要接受“法制教育培训”。
+  总领事史云森，于是不少陆续前往英国驻重庆总领事馆微博下方留言说，“按赞”、“鼓掌”、“好人一生平安” 、“可爱又可敬的人”。
  </p>
  <p>
-  对此，旅居日本的蒙古族学者忽必斯对《苹果日报》表示，这个培训班就像新疆的“再教育营”，“就想把内蒙古搞成新疆，集中营、学习班”。忽必斯担心，这将会步另一个少数民族新疆后尘，因为这概念与新疆的“再教育营”类似，都是为了进行思想改造。
+  截至17日，关于“英国驻重庆领事馆救落水女大学生”的话题，吸引了1.2万人围观，8333人留言。
  </p>
  <p>
-  9月15日，内蒙锡林浩特市的“国家通用教材相关指挥部”发布公告，将对一天后“无故未报到入学”的高中生 “取消学籍”，小学、初中生“取消享受的各类补助、资助”；家长“取消一切”“惠农惠牧政策性补贴”，“市农业银行、农村信用社等金融部门5年内停止办理贷款手续”。
- </p>
- <p>
-  总部在美国纽约的南蒙古人权信息中心执行主任恩赫巴图对《美国之音》表示，这是中共当局对大规模公民不服从运动的第二波镇压。“第一波是政府官员、教师或任何人，开除他们的公职，取消他们的头衔，取消他们的职务……但是这一波，切断你进入银行和金融机构的渠道。这是
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  随着事件在网络发酵，《澎湃新闻》报导称，事发当日是周末，新任英国驻重庆总领事馆总领事的
+  <span href="https://www.secretchina.com/news/gb/tag/史云森" target="_blank">
+   史云森
   </span>
-  （中共）地方政府动员所有手段、所有资源对整个地区进行的镇压。”
- </p>
- <p>
-  恩赫巴图说，上述措施证明
-  <span href="https://www.secretchina.com/news/gb/tag/抗议" target="_blank">
-   抗议
-  </span>
-  力量强大，“中国（中共）政府从未见过这样的抵抗。这是非常特别的。他们以为蒙古人很容易就接受了，不会有任何抵抗，也许有些小的抱怨，这是他们的期待。但是实际上它变成了全区性非常典型的非暴力公民不服从抵抗运动。他们动员了所有资源来镇压，企图使他们屈服，但蒙古人民没有放弃。”
+  ，独自一人前往中山古镇游玩，这是他第一次到重庆周边游玩。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -85,7 +85,7 @@
   </div>
  </center>
  <p>
-  据南蒙古人权信息中心最近一份通报统计，截至前日已有至少9人因当局强推汉语教学而被逼死，当中包括二连浩特一位蒙古族中学校长乌兰。
+  据史云森事后表示，由于事情发生得突然，但他觉得这是应该做的事情，因此没有多想，就跳下水救人，上岸后看到女孩逐渐恢复意识，他心中一颗石头终于落地。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -100,7 +100,21 @@
   </div>
  </center>
  <p>
-  该中心又指，当局连日肆意逮捕，违法拘留，强迫失踪和软禁不同政见者、作家和牧民领袖等，被捕人数已过千人，南蒙古人权信息中心形容内蒙已经成为警察社会（Police State）。
+  公开资料显示，史云森今年61岁，已在中国生活和工作9年，今年11月16日史云森正式担任英国驻重庆总领事馆总领事。他曾是一名具有30年丰富经验的土木工程师，曾参与港珠澳大桥建设，闲暇时喜欢艺术创作，热爱滑雪和骑行，还获得去年北京国际铁人3项赛的年龄组冠军。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -132,7 +146,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -164,13 +178,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/946506.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/946506.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/946506.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/18/946506.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952775.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952775.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952775.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/17/952775.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/946506.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/952775.md' width='0px' height='0px'/>
