--- a/pages/nsc418/n12553075.md
+++ b/pages/nsc418/n12553075.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.16】川普将发起重大诉讼" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1285529792-600x400.jpg"/>
+<div><img alt="【大选更新11.16】彭斯：川普统率了疫苗开发" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229608517-600x400.jpg"/>
 <div class="caption">
- 川普（特朗普）总统表示将发起“重大诉讼”，来证明2020美国总统大选是一场违宪的选举。(Tasos Katopodis/Getty Images)
+ 针对摩德纳疫苗问世及有效率高达95%的消息，彭斯副总统周一（11月16日）上午表示川普总统统率了历史上最快的疫苗开发。2020年11月13日，美国白宫玫瑰园，副总统彭斯（Mike Pence）与总统川普一起发表有关“神速行动”（Operation Warp Speed）的最新信息。(MANDEL NGAN/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
