--- a/pages/soh6/443452.md
+++ b/pages/soh6/443452.md
@@ -63,6 +63,39 @@
   以下是11月16日（周一）选情更新报导：
  </p>
  <h3>
+  摩德纳发布新中共病毒疫苗 有效率近95% 川普称赞
+ </h3>
+ <p>
+  美国生物技术公司Moderna周一（11月16日）宣布，该公司后期临床试验分析，即将问世的新中共病毒疫苗有效性达到94.5%。
+  <ok href="/term/1203">
+   川普总统
+  </ok>
+  对此发表系列推文称赞，并提到，这些成果都是在川普政府的监督下获得的。
+ </p>
+ <p>
+  <ok href="/term/1203">
+   川普总统
+  </ok>
+  说：“又一个疫苗刚刚宣布（问世）。这次是由Moderna（开发的），有效率为95％。伟大的‘历史学家们’，请记住，这些将结束中（共）国瘟疫的伟大发现都是在我的监督下发生的！”
+ </p>
+ <div class="soh-embed">
+  <div class="soh-embed-inner">
+   <div class="iframely-embed" style="max-width: 550px;">
+    <div class="iframely-responsive">
+    </div>
+   </div>
+  </div>
+ </div>
+ <h3 class="title">
+  川普律师朱利安尼：舞弊证据已充分 我们将翻转大选结果
+ </h3>
+ <p>
+  川普律师团队的牵头人朱利安尼（Rudy Giuliani）周日（11月15日）表示，他的团队已记录足够多的非法选票，可翻转关键摇摆州的选举结果。他相信，整个总统大选的结果也将被“翻转”。
+ </p>
+ <p>
+  朱利安尼是在接受《福克斯》新闻采访时说的这番话，他表示，媒体宣布拜登赢得的那些摇摆州，实际都是川普获胜的州。他说：“在这些州中的每一个州，我们都有绰绰有余的非法选票被记录在案，足以推翻那个州的选举结果。”他还谈到，在那些不允许共和党监票员入内监票的关键地区，那些选票都属于无效选票，而且，许多证人都亲眼目睹了选举中的欺诈行为。
+ </p>
+ <h3>
   川普：我们将
   <ok href="/term/420427">
    提起重大诉讼
@@ -102,7 +135,7 @@
   近日，联邦文件再次揭露出与拜登有关的丑闻。文件显示，拜登夫妇成立的癌症慈善基金会并未将资金用来进行医疗研究，而是用来给奥巴马政府和瑞辉公司的“高管们”发薪水。
  </p>
  <p>
-  拜登基金会总裁西蒙（Gregory Simon）是辉瑞（Pfizer）公司的前高管，也是巴马政府白宫癌症工作组的负责人。担任拜登基金会总裁后，他的薪水从2017年的224,539美元跃升至2018年的429,850美元，几乎翻了一倍。而奥巴马政府癌症计划的前幕僚长嘉年华（Danielle Carnival）也从拜登的基金会里拿走258,207美元。
+  拜登基金会总裁西蒙（Gregory Simon）是辉瑞（Pfizer）公司的前高管，也是奥巴马政府白宫癌症工作组的负责人。担任拜登基金会总裁后，他的薪水从2017年的224,539美元跃升至2018年的429,850美元，几乎翻了一倍。而奥巴马政府癌症计划的前幕僚长嘉年华（Danielle Carnival）也从拜登的基金会里拿走258,207美元。
  </p>
  <h3>
   川普团队律师鲍威尔：中情局长应立刻被撤职
@@ -131,7 +164,7 @@
   乔丹说：“重要的是，我们必须深入了解在宾夕法尼亚州、密歇根州、威斯康星州、乔治亚州及所有重要摇摆州发生的一切。”他认为，大选深夜发生所有州同时暂停计票后，川普就开始失去优势，这令人心生疑惑。他说：“为什么拜登和民主党不想知道答案？为什么共和党监票员不被允许监票？这些都是基本问题，必须解决才能使美国人对选举有信心。”
  </p>
  <h3>
-  港媒：中共闭门会议消息流出 北京祕密启动“拜登计划”
+  港媒：中共闭门会议消息流出 北京秘密启动“拜登计划”
  </h3>
  <p>
   据香港媒体报导，中共在美国左派媒体宣布拜登获胜、川普阵营大量揭发拜登方舞弊的情况下，已经与拜登方秘密会面，召开闭门会议，并秘密启动了“拜登计划”，恢复中美之间的半官方联系。
