同步于: 11月17日9时3分

--- a/pages/nf4514/n12550675.md
+++ b/pages/nf4514/n12550675.md
@@ -703,6 +703,13 @@
     今年，我们尤其要珍惜和感谢朋友和家人的陪伴。第一夫人和我祝愿美国和世界各地数百万庆祝排灯节的人们，度过一个欢乐的节日，并拥有一个繁荣的新起点。
    </p>
    <p>
+    【大选更新11·14】
+    <ok href="https://www.epochtimes.com/gb/20/11/14/n12549021.htm">
+     请点击这里
+    </ok>
+    。
+   </p>
+   <p>
     责任编辑：李玲
    </p>
   </p>
