--- a/pages/nf4514/n12555633.md
+++ b/pages/nf4514/n12555633.md
@@ -43,7 +43,7 @@
  <ok href="https://www.epochtimes.com/gb/tag/%E8%88%9E%E5%BC%8A.html">
   舞弊
  </ok>
- ，2016年也上演过，律师们已经搜集到相当程度的具体证据，还掌握了选举舞弊软件的算法，足以让选举结果逆转翻盘。
+ ，2016年也上演过，律师们已经搜集到很多具体证据，还掌握了选举舞弊软件的算法，足以让选举结果逆转翻盘。
 </p>
 <p>
  与此同时，治疗中共病毒的疫苗频传好消息，继辉瑞的疫苗之后，有效率高达95%的摩德纳疫苗问世，彭斯副总统称赞说，在川普总统强有力的领导下，才使得疫苗以史上最快的速度问世。
@@ -84,7 +84,7 @@
 <p>
 </p>
 <h3>
- 扎克伯格涉企图影响美国大选遭起诉
+ 涉企图影响美国大选 扎克伯格遭起诉
 </h3>
 <figure class="wp-caption aligncenter" id="attachment_6685733" style="width: 600px">
  <ok href="https://i.epochtimes.com/assets/uploads/2013/03/1303282101432270.jpg">
@@ -95,10 +95,10 @@
  </figcaption><br/>
 </figure><br/>
 <p>
- 美国一家名为托马斯莫尔社团（Thomas More Society）的民权监察组织将脸书创办人及CEO扎克伯格告上了法庭，质疑他捐赠巨款给非营利组织的目的是为了影响选举，涉嫌违法。
+ 美国一家名为托马斯莫尔社团（Thomas More Society）的民权监察组织将脸书创办人扎克伯格告上了法庭，质疑他捐赠巨款给非营利组织的目的是为了非法影响选举。
 </p>
 <p>
- 今年扎克伯格夫妇向这个非营利组织“科技与公民生活中心”（Centers for Tech and Civic Life）捐赠了至少3.5亿美元，这些私人捐款中的大部分资金都被投向了关键的摇摆州地区，还对选举办公室应如何使用拨款有附加条件。
+ 今年扎克伯格夫妇向非营利组织“科技与公民生活中心”（Centers for Tech and Civic Life）捐赠了至少3.5亿美元，这些私人捐款中的大部分资金都被投向了关键的摇摆州地区，还对选举办公室应如何使用拨款有附加条件。
 </p>
 <p>
  托马斯莫尔社团就是“科技与公民生活中心”的监督组织，目前已经在多个州对此提起诉讼，质疑这些私人拨款的合法性。
