同步于: 11月18日0时3分

--- a/pages/soh6/443848.md
+++ b/pages/soh6/443848.md
@@ -39,6 +39,55 @@
  </p>
  <h2>
   <strong>
+   川普团队与
+   <ok href="/term/23267">
+    乔治亚州
+   </ok>
+   政府继续就签名认证拉锯
+  </strong>
+ </h2>
+ <p>
+  <ok href="/term/23267">
+   乔治亚州
+  </ok>
+  自上周启动了手动
+  <ok href="/term/18180">
+   重新计票
+  </ok>
+  流程，预计在11月19日0点前得出结果。检票过程允许共和党
+  <ok href="/term/419326">
+   监票员
+  </ok>
+  参与，但不包括检查签名匹配的过程。周二，
+  <ok href="/term/23267">
+   乔治亚州
+  </ok>
+  共和党选举监督代表、参议员林赛·格雷厄姆（Lindsey Graham）表示，在该问题上川普团队与该州政府仍在拉锯。
+ </p>
+ <p>
+  按照该州州务卿拉芬斯珀格（Brad Raffensperger）此前的公开声明，该州的
+  <ok href="/term/18180">
+   重新计票
+  </ok>
+  过程由于受到时间限制，无法采取签名认证的方法。
+ </p>
+ <p>
+  周二，格雷厄姆在接受《华盛顿邮报》与CNN采访时表示，当他问拉芬斯珀格，选举官是否有权利拒绝接受签名差距大的地区投票时，拉芬斯珀格回答的十分含糊，他称检票过程是可以“仔细看看，看看你有多少张选票（签名不当）。可以选择扔出去。”
+ </p>
+ <p>
+  格雷厄姆谴责说，该做法可能会导致合法选票被扔掉，说法十分“荒谬”。他呼吁，该州应该在手动计票有规范的验证方式，“听到他认可这样的验证我感到很惊讶”。
+ </p>
+ <p>
+  目前川普团队呼吁在该州加强签名认证的措施，并要求必须公开真实签名。
+ </p>
+ <p>
+  在该问题上，拉芬斯珀格在Facebook上称，“我们加强了签名检查，我们这在投票之前帮助培训了官员对GBI签名进行确认”，但没有公布认证签名的方式与正式政策。
+ </p>
+ <p>
+  在得出手动计票结果后，该州预计将在11月20日进行正式投票认证。
+ </p>
+ <h2>
+  <strong>
    <ok href="/term/23267">
     乔治亚州
    </ok>
@@ -70,6 +119,10 @@
  <p>
   苏锡说，他发现该州计算科布县的17号计票桌员工在3分钟内3次将川普的选票读成拜登，而第二名审计员发现了，指出了第一名员工的错误。他十分质疑的是，是否她的同事能发现每次该名女员工的错误，因为她错误读票的做法平均每分钟一次，十分频繁。
  </p>
+ <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
+  <div>
+  </div>
+ </div>
  <p>
   此外，在18号桌，他发现职员根本不去校对，而是一名人士读什么，另外一人就按照原样记录。
  </p>
@@ -124,10 +177,6 @@
   </ok>
   法律，现任联邦参议员凯利‧洛夫勒（Kelly Loeffler）和大卫‧珀杜（David Perdue）将在2021年1月5日对抗两名民主党挑战者，以稳固共和党在参院的地位。
  </p>
- <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
-  <div>
-  </div>
- </div>
  <p>
   目前参院共和党人与民主党人的比例为50比48，仅剩
   <ok href="/term/23267">
