--- a/pages/soh6/443848.md
+++ b/pages/soh6/443848.md
@@ -39,6 +39,17 @@
  </p>
  <h2>
   <strong>
+   朱利安尼宣布加入宾州法律诉讼团队
+  </strong>
+ </h2>
+ <p>
+  川普总统私人律师、前纽约市市长朱利安尼（Rudy Giuliani）周二宣布加入宾州的法律诉讼团队，以阻止宾夕法尼亚州进行选票认证。
+ </p>
+ <p>
+  在此之前，川普在宾州律师团队的多名成员频繁遭遇威胁与恐吓，导致部分律师流失。本周再度有川普阵营律师接到来自宾州州务卿律师事务所的威胁语音邮件。对此，美国宪法学者和法律教授特雷（ Jonathan Turkey），民主党与极左人士“禁止律师为自己的客户打官司的行为才是真正的、对美国民主的攻击”。
+ </p>
+ <h2>
+  <strong>
    川普团队与
    <ok href="/term/23267">
     乔治亚州
@@ -113,13 +124,13 @@
   </ok>
   海尔·苏锡（Hale Soucie）曝光说，在手动监票站，他见到有些审计员从事着消极的检票工作，而且多次将川普的选票读作拜登。在指出该问题后，他感到被涉事人员和其他选举官高度关注，并恶劣对待。
  </p>
- <p>
-  苏锡说，他发现该州计算科布县的17号计票桌女员工在3分钟内3次将川普的选票读成拜登，而第二名审计员发现了，指出了第一名员工的错误。他十分质疑的是，是否该名女员工的同事能每次都发现她的错误，因为她错误读票的做法平均每分钟一次，十分频繁。
- </p>
  <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
   <div>
   </div>
  </div>
+ <p>
+  苏锡说，他发现该州计算科布县的17号计票桌女员工在3分钟内3次将川普的选票读成拜登，而第二名审计员发现了，指出了第一名员工的错误。他十分质疑的是，是否该名女员工的同事能每次都发现她的错误，因为她错误读票的做法平均每分钟一次，十分频繁。
+ </p>
  <p>
   此外，在18号桌，他发现职员根本不去校对，而是一名人士读什么，另外一人就按照原样记录。
  </p>
