--- a/pages/prog202/a102989315.md
+++ b/pages/prog202/a102989315.md
@@ -1,4 +1,4 @@
-### 【环球直击】10月21日完整版（2）
+### 【环球直击】11月17日完整版（2）
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,36 +7,33 @@
 
 <div><div class="post_content" itemprop="articleBody">
  <p>
-  【新唐人北京时间2020年10月22日讯】【环球直击】10月21日完整版（2）
+  【新唐人北京时间2020年11月18日讯】【环球直击】11月17日完整版（2）
   <br/>
   <strong>
    提要
   </strong>
   <br/>
-  【独家报导】严控意识形态 文件披露
-  <ok href="https://www.ntdtv.com/gb/习近平.htm">
-   习近平
-  </ok>
-  “左转”三节点；
+  多米尼机专为作假票制造 美官员疑收回扣；
   <br/>
-  <ok href="https://www.ntdtv.com/gb/美众院.htm">
-   美众院
+  脱离民主党运动集会 吁独立思考寻找
+  <ok href="https://www.ntdtv.com/gb/真相.htm">
+   真相
   </ok>
-  出台《
-  <ok href="https://www.ntdtv.com/gb/中国工作组法案.htm">
-   中国工作组法案
-  </ok>
-  》 应对中共威胁；
+  ；
   <br/>
-  <ok href="https://www.ntdtv.com/gb/美国教育部.htm">
-   美国教育部
+  <ok href="https://www.ntdtv.com/gb/蓬佩奥.htm">
+   蓬佩奥
   </ok>
-  ：12所名校65亿外国捐款未申报
+  欧洲行 会东正教领袖讨论
+  <ok href="https://www.ntdtv.com/gb/信仰自由.htm">
+   信仰自由
+  </ok>
+  ；
   <br/>
-  <ok href="https://www.ntdtv.com/gb/美大选.htm">
-   美大选
+  <ok href="https://www.ntdtv.com/gb/约翰逊.htm">
+   约翰逊
   </ok>
-  终场辩论 川普阵营要求聚焦外交政策
+  再次隔离 Moderna疫苗近95%有效。
  </p>
  <div class="single_ad">
  </div>
@@ -44,13 +41,13 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102968454.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102968454.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102968454.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/10/21/a102968454.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102989315.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102989315.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102989315.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/11/17/a102989315.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102968454.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102989315.md' width='0px' height='0px'/>
