--- a/pages/p1/952898.md
+++ b/pages/p1/952898.md
@@ -1,4 +1,4 @@
-### 西安地铁摆拍演砸 当事人发文揭实情(组图)
+### 马云好友钱峰雷遇袭画面曝光：数名刀手猛砍(视频/图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,104 +6,78 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p>
-  【看中国2020年9月20日讯】（看中国记者端木珊综合报导）
-  <strong>
-   西安地铁官方公众号
-  </strong>
-  日前发布一则“
-  <strong>
-   正能量
-  </strong>
-  ”博文，宣传工作人员为乘客处理伤口的暖心事件，结果被当事人揭穿实情，谴责其
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/摆拍" target="_blank">
-    摆拍
+ <p style="text-align:center">
+  <img alt="马云 好友 钱多多" src="https://img3.secretchina.com/pic/2020/11-18/p2820181a297739122-ss.jpg" style="height:337px; width:600px"/>
+  <br>
+   钱峰雷14日凌晨在香港街头遭到3、4名男子持刀袭击。（图片来源：视频截图）
+   <span id="hideid" name="hideid" style="color:red;display:none;">
+    <span href="https://www.secretchina.com">
+    </span>
    </span>
-  </strong>
-  ，进行不实宣传。
-  <span id="hideid" name="hideid" style="color:red;display:none;">
-   <span href="https://www.secretchina.com">
-   </span>
-  </span>
+  </br>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  9月18日上午，
-  <span href="https://www.secretchina.com/news/gb/tag/西安地铁" target="_blank">
-   西安地铁
-  </span>
-  微信公众号发布消息说，“近日，地铁2号线钟楼站内，一位踮着脚走路的女乘客引起了工作人员注意。询问得知，女乘客被脚上新鞋磨破了脚。工作人员立即拿来了医药箱，为乘客简单处理伤口，并送上创可贴备用，女乘客对工作人员的细心帮助表示感谢。”文章内附了工作人员递送创可贴的现场照片，还贴了“遇见最美西安”的话题标签。
+  【看中国2020年11月18日讯】（看中国记者黎小葵综合报导）阿里巴巴创办人
+  <strong>
+   马云
+  </strong>
+  好友
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/钱峰雷" target="_blank">
+    钱峰雷
+   </span>
+  </strong>
+  14日凌晨在
+  <strong>
+   香港
+  </strong>
+  街头遭3、4名男子持刀袭击后，钱峰雷16日登报悬赏1000万港元寻找缉凶，目前网传一段钱峰雷遇袭时的监视画面，可见凶嫌下车后“快闪”
+  <strong>
+   袭击
+  </strong>
+  ，过程不到10秒。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
- <p style="text-align: center;">
-  <img alt="西安地铁官方公众号日前发布一则“正能量”博文，结果被当事人揭穿实情，谴责其摆拍，进行不实宣传。" src="https://img3.secretchina.com/pic/2020/9-20/p2779841a173236970-ss.jpg"/>
-  <br>
-   西安地铁官方公众号日前发布一则“正能量”博文，结果被当事人揭穿实情，谴责其摆拍，进行不实宣传。（网络图片）
-  </br>
- </p>
  <p>
-  就在同一天，涉事女乘客发布了一则“辟谣”朋友圈，对整件事情进行了详细描述。
- </p>
- <p>
-  该女乘客表示，几天前，自己因工作原因磨破了脚，出门时脚上贴了创可贴，但由于鞋口摩擦导致创可贴卷边。由于事发时是在早上，药店没有开门，她走到地铁站后，就询问工作人员是否有创可贴。结果，经过三个工作人员的来回工作交接，这位女乘客在等待十几分钟后，工作人员才带着相机和手里提着药箱的领导过来。
- </p>
- <p>
-  这位领导对涉事女乘客进行询问后，缓缓蹲下，打开药箱，拿出创可贴。这位女乘客反复说她只需要一个创可贴，但这位领导却从两个给到四个，直到确定照片拍合适稳妥，才把创可贴交到她手中。
- </p>
- <p>
-  该女士在朋友圈中直言“西安地铁作为公众媒体，做了不实的报道！”她特别强调，不是工作人员发现她踮着脚走路，她走路很正常，并且是她主动上前询问是否有创可贴；工作人员并没有立即拿来药箱，是这位女士等待了十几分钟后才拿来；工作人员也没有为她简单的处理伤口，只是给了她创可贴，还是反反复复的给，直到确认照片拍稳妥为止。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align: center;">
-  <img alt="涉事女乘客发朋友圈揭穿实情，谴责西安地铁摆拍，进行不实宣传。" src="https://img3.secretchina.com/pic/2020/9-20/p2779842a836777089-ss.jpg"/>
-  <br>
-   涉事女乘客发朋友圈揭穿实情，谴责西安地铁摆拍，进行不实宣传。（微信朋友圈截图）
-  </br>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  在这位女士揭穿实情后，西安地铁微信公众号删除了前述“
-  <span href="https://www.secretchina.com/news/gb/tag/正能量" target="_blank">
-   正能量
+  根据监视画面显示，一辆私家车尾随接载钱峰雷的座车，两车前后抵达
+  <span href="https://www.secretchina.com/news/gb/tag/香港" target="_blank">
+   香港
   </span>
-  ”帖文。
+  湾仔会展皇朝会门口，凶嫌最初打开车门监视，当看到钱峰雷及其男助理步出门外后，3名凶嫌立即下车冲向2人攻击，随后逃离现场，行凶过程不过10秒。钱峰雷负伤突围登上座驾逃离，刀手亦转身逃跑登上接应私家车离开。
+ </p>
+ <p style="text-align:center">
+ </p>
+ <p>
+  钱峰雷遭受
+  <span href="https://www.secretchina.com/news/gb/tag/袭击" target="_blank">
+   袭击
+  </span>
+  后所幸无受重伤，15日晚间在微博表示，“感谢香港警队！为支持香港警方尽早破案，拟在明天星岛日报等媒体刊登悬红公告，请更多知情人士提供线索，还社会以安宁！”文中一并附上悬赏公告，指“任何人若能提供可靠消息或证据，如银色私家车牌片段等等，可获奖赏最高港币1000万元，或按此比例之悬红金额。”若指证到幕后指使人，令对方在香港成功定罪，可经面议获得更高赏金。
+ </p>
+ <p>
+  据了解，钱峰雷出事前出席了一个“牌局”，席间曾与人发生争执，离开后便遇袭，警方已约见曾出席“牌局”的人士，包括据称曾与钱争执的“牌友”，但初步相信有关人士与袭击案无关。
+ </p>
+ <p>
+  但无独有偶，近日网络传出一篇名为&lt;
+  <span href="https://www.secretchina.com/news/gb/tag/马云" target="_blank">
+   马云
+  </span>
+  密友钱峰雷往事：赌场发家？ 6年前已‘逃过一死’&gt;的文章，揭露了6年前同一天钱峰雷也曾遭遇类似砍杀事件。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -118,7 +92,7 @@
   </div>
  </center>
  <p>
-  据悉，相关事件一度登上热搜榜。不少网友看到前后两则消息后，都表示“承包了这两天的笑点！”
+  文章指出，2014年11月14日入夜时分，钱峰雷从温州平阳县龙尾山的山坡上遭遇枪击事件，导致他当时耳部受伤。而事情起因是，知名温州商人林圣雄在赌场怀疑钱峰雷“偷码”，据说，事后钱峰雷将2.5亿元人民币以赌场筹码或转账方式支付给林圣雄，算是平事。但后来，另外一个叫陈金土的人和林又一起向钱要5亿元，钱最终选择报案。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -133,7 +107,7 @@
   </div>
  </center>
  <p>
-  有网友直言，“我说每天哪来的那么多暖心事，这个新闻告诉了我们真相，原来都是摆拍啊，自己也够傻的，信了这么多年。”“如今形式主义见怪不怪了。多的数不过来了！哪个地方来个大一些的领导检查，那搞得跟真的似的，等走了。呵呵，懂的人都懂。”
+  事后，林圣雄以敲诈勒索罪，判处有期徒刑10年6个月，并处罚金10万元人民币。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -148,7 +122,56 @@
   </div>
  </center>
  <p>
-  还有网友发问讽刺，“以‘不要脸’的方式‘要脸’”，“为了宣传扭曲事实的报导还少吗？”“这种‘正能量’大可不必”。
+  而钱峰雷此次再遇袭，香港金融圈怀疑，或是与蚂蚁金服上市案遇到挫折有关。与此同时，此次事件也让
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  金融圈的“宁波帮”意外曝光。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  据《扬子晚报》披露，钱峰雷与马云私交匪浅。早年阿里巴巴在美国上市时，钱峰雷就站在马云身边。马云背后的宁波帮有3人，分别是钱峰雷、郁国祥、沈国军。三人都是宁波人。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  目前马云是大自然保护协会（TNC）中国主席，钱峰雷则是大自然保护协会的理事。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  另外，2015年6月，钱峰雷作为“云锋基金”成员之一曾访问韩国。云锋基金成立于2010年4月，该基金组建者包括马云、虞锋、史玉柱、沈国军、汪建国、王玉锁、刘永好、江南春、徐航、周忻、陈义红等人。钱峰雷则是阿里巴巴的股东。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -180,7 +203,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -212,13 +235,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/946682.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/946682.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/946682.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/20/946682.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952898.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952898.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/952898.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/18/952898.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/946682.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/952898.md' width='0px' height='0px'/>
